--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         <!-- CTA -->
         <div class="cta">
             <h2>Garanta Sua Vaga Agora!</h2>
-            <p>Agendamento através do WhatsApp</p>
+            <p>Incrição através do WhatsApp</p>
             <a href="https://wa.me/5517997326631?text=Olá!%20Gostaria%20de%20me%20inscrever%20no%20Curso%20de%20Polimento%20StarCar%202026" 
                class="whatsapp-btn" 
                target="_blank">
@@ -379,4 +379,5 @@
         </div>
     </div>
 </body>
+
 </html>
